Fix `replu-poptip` content overflow issue
If using `auto`, then there will be scrollbar at the bottom, which is not what we want.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -72,7 +72,7 @@ and (-webkit-min-device-pixel-ratio:2) {
 .wf .reply-poptip { display: flex; flex-direction: row; align-items: center;}
 .wf .reply-poptip img { width: 30px; height: 30px; margin-right: 8px;}
 .wf .reply-poptip div { display: flex; flex-direction: column; }
-.wf .reply-poptip div span { overflow: auto; max-width: 120px; text-overflow: ellipsis; }
+.wf .reply-poptip div span { overflow: hidden; max-width: 120px; text-overflow: ellipsis; }
 .wf .wf-comment-item .drowdown-menu-button { opacity: 0; }
 .wf .wf-comment-item .comment:hover .drowdown-menu-button { opacity: 1; }
 .wf .wf-comment-item .wf-comment-avatar { margin-right: 12px; }
